# Sentinel-X

./: .gitignore  DEMO_GUIDE.md  LICENSE  README.md  docker-compose.yml  skills.md
.github/workflows/: deploy.yml
backend-gateway/: Dockerfile  go.mod  main.go  main_test.go
client-extension/: manifest.json  test_wasm.js
client-extension/src/: background.js
client-extension/src/wasm/: entropy.cpp  entropy.wasm
inference-engine/: Dockerfile  pyproject.toml
inference-engine/src/: interceptor.py  server.py
inference-engine/tests/: test_interceptor.py
tests/: playground.html
