[project]
name = "inference-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
